tests/invalid/bad_origin.s
_start:
  nop
  nop
  nop
  nop
.origin 0
  nop
  nop